# PulseFlow-App

./: .env.example  .firebaserc  .gitignore  CURSOR.md  README.md  firebase.json  package.json  vercel.json
apps/api/: .env.example  README.md  package-lock.json  package.json  vercel.json
apps/mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
contracts/: README.md
contracts/rewards/: README.md  (+1 more)
contracts/rewards-solana/: Anchor.toml  Cargo.toml  DEPLOY.md  README.md
contracts/rewards-solana/programs/reward_vault/: Cargo.toml
contracts/rewards-solana/programs/reward_vault/src/: lib.rs
docs/: ai-recommendations-implementation.md  ai-stack.md  app-protocol-token-diagram.md  app-store-copy.md  auth-flow.md  auth-options.md  block-gating-matrix.md  custom-domains.md  deploy-backend.md  deploy.md  design-system.md  disclaimer.md  faq.md  fiat-subscription-integration.md  firebase-google-auth.md  frontend-and-testing.md  google-auth-easy.md  google-cloud-oauth-setup.md  lab-wallet-connect.md  landing-page-copy.md  magic-google-auth.md  move-repo-to-org.md  next-steps.md  notifications.md  nutrition-block-design.md  points-and-redemption.md  privacy-policy.md  product.md  pwa-and-google-play.md  referrals.md  roadmap.md  setup-database.md  simple-analytics.md  terms-of-service.md  token-gating-policy.md  token-utility.md  user-data-storage.md  user-tiers-and-check-ins.md  vercel-env-variables.md  vision.md  (+4 more)
(+221 files in other folders)
