[package]
name = "reward_vault"
version = "0.1.0"
description = "Pulse rewards vault: owner deposits SPL token and can transferTo(recipient, amount)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated_token"] }
